--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 	<properties>
 		<java.version>18</java.version>
 		<dozer.version>6.4.0</dozer.version>
-		<!-- Ajuste para a versão do Maven -->
+		<springdoc.version>2.0.2</springdoc.version>
 		<maven.version>3.9.3</maven.version>
 		<spring.boot.version>2.5.5</spring.boot.version>
 	</properties>
@@ -45,6 +45,11 @@
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>${springdoc.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.flywaydb</groupId>
