--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,40 @@
+server:
+  port: 80
+cors:
+  originPatterns: http://localhost:3000,http://localhost:8080,https://rodrigo.com.br
+  allowed-origins:
+    - "http://localhost:3000"
+    - "http://localhost:8080"
+    - "https://rodrigo.com.br"
+file:
+  upload-dir: /Code/UploadDir
+security:
+  jwt:
+    token:
+    secret-key: 53cr37
+    expire-lenght: 3600000
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/rest_with_spring_boot_erudio ?useSSL=false&serverTimezone=UTC
-    username: developer
-    password: 1234567
+    url: jdbc:mysql://localhost:3306/rest_with_spring_boot_erudio?useSSL=false&serverTimezone=UTC
+    username: root
+    password: admin123
   jpa:
     hibernate:
       ddl-auto: none
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
+    show-sql: false
+  servlet:
+    multipart:
+    enabled: true
+    file-size-threshold: 2KB
+    max-file-size: 200MB
+    max-request-size: 215MB
 spring-doc:
-  pathsToMatch: /api/**/v1/**
+  pathsToMatch: 
+    - /auth/**
+    - /api/**/v1/**
   swagger-ui:
   use-root-path: true
