--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,5 +1,14 @@
 server:
-  port: 8888 
+  port: 8888
+cors:
+  originPatterns: http://localhost:3000,http://localhost:8080,https://rodrigo.com.br
+file:
+  upload-dir: /home/runner/work/spring-boot-rodrigo/UploadDir
+security:
+  jwt:
+    token:
+      secret-key: 53cr37
+      expire-length: 3600000
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -9,7 +18,16 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
-spring-doc:
-  pathsToMatch: /api/**/v1/**
+    show-sql: false
+  servlet:
+    multipart:
+    enabled: true
+    file-size-threshold: 2KB
+    max-file-size: 200MB
+    max-request-size: 215MB
+springdoc:
+  pathsToMatch:
+    - /auth/**
+    - /api/**/v1/**
   swagger-ui:
-  use-root-path: true
+    use-root-path: true
